<resources>
<!--    Main-->
    <string name="app_name">Calculator</string>
    <string name="button_simple_calculator_name">Simple</string>
    <string name="button_advanced_calculator_name">Advanced</string>
    <string name="button_exit_name">Exit</string>

<!--    Calculator-->
    <string name="button_back_name">Back</string>
    <string name="button_clear_name">C</string>
    <string name="button_percent_name">%</string>
    <string name="button_div_name">/</string>

    <string name="button_7_name">7</string>
    <string name="button_8_name">8</string>
    <string name="button_9_name">9</string>
    <string name="button_mul_name">*</string>

    <string name="button_4_name">4</string>
    <string name="button_5_name">5</string>
    <string name="button_6_name">6</string>
    <string name="button_sub_name">-</string>

    <string name="button_1_name">1</string>
    <string name="button_2_name">2</string>
    <string name="button_3_name">3</string>
    <string name="button_add_name">+</string>

    <string name="button_negate_name">+ / -</string>
    <string name="button_0_name">0</string>
    <string name="button_dot_name">.</string>
    <string name="button_equals_name">=</string>

<!--    Advanced Calculator-->
    <string name="button_log_name">log</string>
    <string name="button_ln_name">ln</string>

    <string name="button_tan_name">tan</string>
    <string name="button_sqrt_name">sqrt</string>

    <string name="button_cos_name">cos</string>
    <string name="button_powY_name">x^y</string>
    <string name="button_pow2_name">x^2</string>

    <string name="button_sin_name">sin</string>
    <string name="button_pi_name">π</string>
    <string name="button_openingParenthesis_name">(</string>
    <string name="button_closingParenthesis_name">)</string>

</resources>
