<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/SimpleCalcTheme"
        android:orientation="vertical">

    <TextView
            android:id="@+id/sCalc_txv_display"
            android:layout_width="match_parent"
            android:layout_height="@dimen/calc_display_height"
            android:text="" />

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ButtonStyle"
            android:orientation="vertical">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/sCalc_btn_percent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_percent_name"
                    />

            <Button
                    android:id="@+id/sCalc_btn_clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_clear_name"
                    />

            <Button
                    android:id="@+id/sCalc_btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_back_name" />

            <Button
                    android:id="@+id/sCalc_btn_div"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_div_name" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/sCalc_btn_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_7_name" />

            <Button
                    android:id="@+id/sCalc_btn_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_8_name" />

            <Button
                    android:id="@+id/sCalc_btn_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_9_name" />

            <Button
                    android:id="@+id/sCalc_btn_mul"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_mul_name" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/sCalc_btn_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_4_name" />

            <Button
                    android:id="@+id/sCalc_btn_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_5_name" />

            <Button
                    android:id="@+id/sCalc_btn_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_6_name" />

            <Button
                    android:id="@+id/sCalc_btn_sub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_sub_name" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/sCalc_btn_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_1_name" />

            <Button
                    android:id="@+id/sCalc_btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_2_name" />

            <Button
                    android:id="@+id/sCalc_btn_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_3_name" />

            <Button
                    android:id="@+id/sCalc_btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_add_name" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/sCalc_btn_negate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_negate_name" />

            <Button
                    android:id="@+id/sCalc_btn_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_0_name" />

            <Button
                    android:id="@+id/sCalc_btn_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_dot_name" />

            <Button
                    android:id="@+id/sCalc_btn_equals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_equals_name" />
        </TableRow>
    </TableLayout>

</LinearLayout>